2007-10-21  Robert Ancell  <robert.ancell@gmail.com>

	* Added tests/ dir containing PGN test files
	* lib/chess/lan.py, pgn.py: Add better support for informal PGN files (Bug #488244)

2007-10-07  Robert Ancell  <robert.ancell@gmail.com>

	* Disable navigation buttons when at start/end of moves (Bug #440920)

2007-10-06  Robert Ancell  <robert.ancell@gmail.com>

	* Merged glchess-ggz branch to give glchess initial ggz support	 (Bug #392280)
	* Removed tab support and added game history support (no UI yet)
	* Added ability to resign and claim draws
	* Reworked some strings that were hard to translate (Bug #475555)

2007-08-12  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/main.py: Resolve a startup crasher bug in glChess, by
	reverting the invalid class. (Bug #471238)

2007-08-12  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gtkui/chessview.py: Fix another instance of bug #459740,
	which causes crashes because pygtk made the tooltip style private.

2007-06-11  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/gtkui/gtkui.py, dialogs.py: Gracefully handle not being able
	  to get tooltip style (bug #459740)

2007-06-11  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/scene/human.py: Clicking a second time on a selected square
	  deselects it (sf.net bug #1729938)

2007-06-10  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/ai.py: Use correct pid not 0 for killing AIs (Bug #443073)
                         This is a severe bug that causes the X server to be
                         killed accidentally on some systems

2007-06-03  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/main.py: Catch IOError on explicitly loaded games (Bug #442383)

2007-05-28  Robert Ancell  <robert.ancell@gmail.com>

	* Change 2D knights to face left (Bug #434496)

2007-05-16  Robert Ancell  <robert.ancell@gmail.com>

	* Don't animate rotation on startup or when changing between 2/3D

2007-05-16  Robert Ancell  <robert.ancell@gmail.com>
